documentation updates - "Bit-wise" -> "WMO bit-wise"

--- a/src/bufrlib.h.in
+++ b/src/bufrlib.h.in
@@ -118,7 +118,7 @@ void elemdx_f(char *card, int lun);
  * Wraps numtbd() subroutine.
  *
  * @param lun - File ID.
- * @param idn - Bit-wise representation of FXY value.
+ * @param idn - WMO bit-wise representation of FXY value.
  * @param nemo - Mnemonic.
  * @param nemo_str_len - Length of nemo string.
  * @param tab - Type of internal DX BUFR table ('B', or 'D').
