--- a/.github/workflows/Linux.yml
+++ b/.github/workflows/Linux.yml
@@ -25,8 +25,7 @@ jobs:
       run: |
        sudo apt-get update
        sudo apt-get install python3-pip python3-dev python3-numpy
-       sudo python3 -m pip install -U pip setuptools
-       sudo python3 -m pip install -U numpy
+       sudo python3 -m pip install -U pip
        sudo python3 -m pip install -U netCDF4
        sudo python3 -m pip install -U pdoc
 
