--- a/.github/workflows/MacOS.yml
+++ b/.github/workflows/MacOS.yml
@@ -19,16 +19,21 @@ jobs:
       FC: gfortran-11
 
     steps:
+
+    - name: Set up Python 3.11
+      uses: actions/setup-python@v4
+      with:
+        python-version: 3.11
     
     - name: install-deps
       run: |
         pip3 install numpy
+        pip3 install netCDF4
         pip3 install meson
         pip3 install ninja
-        pip3 install netCDF4
         pip3 install protobuf
         sudo ln -sf /usr/local/bin/gfortran-11 /usr/local/bin/gfortran
-          
+
     - name: checkout-bufr
       uses: actions/checkout@v3
       with: 
