--- a/.github/workflows/MacOS.yml
+++ b/.github/workflows/MacOS.yml
@@ -31,6 +31,7 @@ jobs:
         pip3 install netCDF4
         pip3 install meson
         pip3 install ninja
+        pip3 install protobuf==3.19.4
         sudo ln -sf /usr/local/bin/gfortran-11 /usr/local/bin/gfortran
 
     - name: checkout-bufr
