--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -21,7 +21,7 @@ add_custom_command(
   TARGET python_mod
   POST_BUILD
   COMMAND ${CMAKE_COMMAND} -E env
-                   "LDFLAGS=-L${CMAKE_BINARY_DIR}/src" "LIBS=-lbufr_4"
+                   LDFLAGS=-L${CMAKE_BINARY_DIR}/src LIBS=-lbufr_4
                    ${F2PY_EXECUTABLE} --verbose
                    -c "${CMAKE_CURRENT_SOURCE_DIR}/_bufrlib.pyf"
                    -m _bufrlib
