--- a/.github/workflows/MacOS.yml
+++ b/.github/workflows/MacOS.yml
@@ -19,6 +19,11 @@ jobs:
       FC: gfortran-11
 
     steps:
+
+    - name: Set up Python 3.11
+      uses: actions/setup-python@v4
+      with:
+        python-version: 3.11
     
     - name: install-deps
       run: |
