--- a/utils/sinv.F90.in
+++ b/utils/sinv.F90.in
@@ -45,7 +45,11 @@ program sinv
 
   ! define master table directory
 
-  call openbf(lunbf,'FIRST',lunbf)  ! need to call openbf prior to calling mtinfo
+  ! Before calling mtinfo, make an initial call to openbf so that bfrini is called internally.
+  ! Otherwise, if we wait until later to make the initial call to openbf, then the internal call
+  ! to bfrini will end up overwriting the master table directory that we pass in during either
+  ! of the following calls to mtinfo.
+  call openbf(lunbf,'FIRST',lunbf)
   if(narg==2) then ! arg 2 would be a user defined table dir
      call get_command_argument(2,tbldir)
      call mtinfo(tbldir,3,4)
