convert some f and f90 routines to F90

--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -9,13 +9,13 @@ configure_file(${CMAKE_CURRENT_SOURCE_DIR}/sinv.F90.in ${CMAKE_CURRENT_BINARY_DI
 
 # Source code for utilities.
 list(APPEND _utils_srcs
-  binv.f90
+  binv.F90
   cmpbqm.F90
   ${CMAKE_CURRENT_BINARY_DIR}/sinv.F90
-  gettab.f90
+  gettab.F90
   readbp.F90
   readmp.F90
-  split_by_subset.f90
+  split_by_subset.F90
   xbfmg.c
 )
 
