add testing for upds3 and wrdesc, and convert arallocf and ardllocf to F90

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -26,7 +26,7 @@ list(APPEND fortran_src
   ufbmem.f ufbmex.f ufbmms.f ufbmns.f ufbovr.f ufbpos.f ufbqcd.f ufbqcp.f ufbrep.f ufbrms.f ufbrp.f
   ufbrw.f ufbseq.f ufbsp.f ufbstp.f ufbtab.f ufbtam.f ufdump.f upb.f upbb.f upc.F90 upds3.f upftbv.f
   ups.f uptdd.f usrtpl.f wrcmps.f wrdxtb.f writcp.f writdx.f writlc.f writsa.f writsb.f
-  wrtree.f wtstat.f arallocf.f ardllocf.f closbf.f ireadmt.f irev.F90 isetprm.F90 openbf.f pkvs01.f
+  wrtree.f wtstat.f arallocf.F90 ardllocf.F90 closbf.f ireadmt.f irev.F90 isetprm.F90 openbf.f pkvs01.f
   fortran_open.F90 fortran_close.F90 bufr_interface.F90 pkb8.F90 upb8.F90 up8.F90 setim8b.F90
   bufr_c2f_interface.F90 x48.F90 x84.F90 bufrlib.F90)
 
