make MXNAF configurable at run time, and add testing for stseq

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -34,25 +34,12 @@ list(APPEND c_src
   arallocc.c ardllocc.c cpmstabs.c cread.c crwbmg.c cfe.c icvidx.c restd.c stseq.c)
 
 list(APPEND c_hdr
-  cread.h mstabs.h bufr_interface.h)
+  cread.h mstabs.h bufr_interface.h bufrlib.h)
 
 # Create the bvers.f file and bfrini.F90 files
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/bvers.f.in ${CMAKE_CURRENT_BINARY_DIR}/bvers.f @ONLY)
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/bfrini.F90.in ${CMAKE_CURRENT_BINARY_DIR}/bfrini.F90 @ONLY)
 list(APPEND fortran_src ${CMAKE_CURRENT_BINARY_DIR}/bvers.f ${CMAKE_CURRENT_BINARY_DIR}/bfrini.F90)
-
-# Create the bufrlib.h file
-foreach(_var IN ITEMS mxnaf)
-  file(STRINGS modules_vars.F90 _${_var}_tempstr REGEX "integer[a-z ,]*:: ${_var}")
-  if(_${_var}_tempstr MATCHES "${_var} = ([0-9]+)")
-    string(TOUPPER ${_var} _varuc)
-    set(${_varuc} ${CMAKE_MATCH_1})
-  else()
-    message(FATAL_ERROR "Unable to parse variable ${_var} value from file: modules_vars.F90")
-  endif()
-endforeach()
-configure_file(${CMAKE_CURRENT_SOURCE_DIR}/bufrlib.h.in ${CMAKE_CURRENT_BINARY_DIR}/bufrlib.h @ONLY)
-list(APPEND c_hdr ${CMAKE_CURRENT_BINARY_DIR}/bufrlib.h)
 
 include(TestBigEndian)
 test_big_endian(IS_BIG_ENDIAN)
