--- a/src/bfrini.F90.in
+++ b/src/bfrini.F90.in
@@ -14,202 +14,195 @@
 !> @authors J. Woollen J. Ator @date 1994-01-06
 subroutine bfrini
 
-use modv_vars, only: maxtba, maxtbb, maxtbd, mxmsgl, nfiles
+  use modv_vars, only: maxtba, maxtbb, maxtbd, mxmsgl, nfiles
 
-use moda_stbfr
-use moda_idrdm
-use moda_msglim
-use moda_bitbuf
-use moda_bufrmg
-use moda_bufrsr
-use moda_tababd
-use moda_usrint
-use moda_h4wlc
-use moda_dscach
+  use moda_stbfr
+  use moda_idrdm
+  use moda_msglim
+  use moda_bitbuf
+  use moda_bufrmg
+  use moda_bufrsr
+  use moda_tababd
+  use moda_usrint
+  use moda_h4wlc
+  use moda_dscach
 
-COMMON /MAXCMP/ MAXCMB,MAXROW,MAXCOL,NCMSGS,NCSUBS,NCBYTS
-COMMON /PADESC/ IBCT,IPD1,IPD2,IPD3,IPD4
-COMMON /REPTAB/ IDNR(5,2),TYPS(5,2),REPS(5,2),LENS(5)
-COMMON /DXTAB / MAXDX,IDXV,NXSTR(10),LDXA(10),LDXB(10),LDXD(10), &
-                LD30(10),DXSTR(10)
-COMMON /MRGCOM/ NRPL,NMRG,NAMB,NTOT
-COMMON /DATELN/ LENDAT
-COMMON /ACMODE/ IAC
-COMMON /MSGCMP/ CCMF
-COMMON /TABLEF/ CDMF
+  common /maxcmp/ maxcmb,maxrow,maxcol,ncmsgs,ncsubs,ncbyts
+  common /padesc/ ibct,ipd1,ipd2,ipd3,ipd4
+  common /reptab/ idnr(5,2),typs(5,2),reps(5,2),lens(5)
+  common /dxtab / maxdx,idxv,nxstr(10),ldxa(10),ldxb(10),ldxd(10),ld30(10),dxstr(10)
+  common /mrgcom/ nrpl,nmrg,namb,ntot
+  common /dateln/ lendat
+  common /acmode/ iac
+  common /msgcmp/ ccmf
+  common /tablef/ cdmf
 
-character*240 CMTDIR
-character*56  DXSTR
-character*6   ADSN(5,2),DNDX(25,10)
-character*3   TYPX(5,2),TYPS
-character*1   REPX(5,2),REPS
-character*1   CCMF
-character*1   CDMF
-dimension     NDNDX(10),NLDXA(10),NLDXB(10),NLDXD(10),NLD30(10)
-dimension     LENX(5)
+  character*240 cmtdir
+  character*56  dxstr
+  character*6   adsn(5,2),dndx(25,10)
+  character*3   typx(5,2),typs
+  character*1   repx(5,2),reps
+  character*1   ccmf
+  character*1   cdmf
+  dimension     ndndx(10),nldxa(10),nldxb(10),nldxd(10),nld30(10)
+  dimension     lenx(5)
 
-data ADSN   / '101000','360001','360002','360003','360004' , &
-              '101255','031002','031001','031001','031000' /
-data TYPX   /    'REP',   'DRP',   'DRP',   'DRS' ,  'DRB' , &
-                 'SEQ',   'RPC',   'RPC',   'RPS' ,  'SEQ' /
-data REPX   /      '"',     '(',     '{',     '[' ,    '<' , &
-                   '"',     ')',     '}',     ']' ,    '>' /
-data LENX   /       0 ,     16 ,      8 ,      8  ,     1  /
+  data adsn   / '101000','360001','360002','360003','360004','101255','031002','031001','031001','031000' /
+  data typx   /    'REP',   'DRP',   'DRP',   'DRS',   'DRB',   'SEQ',   'RPC',   'RPC',   'RPS' ,  'SEQ' /
+  data repx   /      '"',     '(',     '{',     '[' ,    '<',     '"',     ')',     '}',     ']' ,    '>' /
+  data lenx   /       0 ,     16 ,      8 ,      8  ,     1  /
 
-data (DNDX(I,1),I=1,25)/ &
-'102000','031001','000001','000002', &
-'110000','031001','000010','000011','000012','000013','000015', &
-                  '000016','000017','000018','000019','000020', &
-'107000','031001','000010','000011','000012','000013','101000', &
-                  '031001','000030'/
+  data (dndx(i,1),i=1,25)/ &
+    '102000','031001','000001','000002', &
+    '110000','031001','000010','000011','000012','000013','000015', &
+                      '000016','000017','000018','000019','000020', &
+    '107000','031001','000010','000011','000012','000013','101000', &
+                      '031001','000030'/
 
-data (DNDX(I,2),I=1,15)/ &
-'103000','031001','000001','000002','000003', &
-'101000','031001','300004', &
-'105000','031001','300003','205064','101000','031001','000030'/
+  data (dndx(i,2),i=1,15)/ &
+    '103000','031001','000001','000002','000003', &
+    '101000','031001','300004', &
+    '105000','031001','300003','205064','101000','031001','000030'/
 
-data NDNDX /  25 ,  15 , 8*0 /
-data NLDXA /  35 ,  67 , 8*0 /
-data NLDXB /  80 , 112 , 8*0 /
-data NLDXD /  38 ,  70 , 8*0 /
-data NLD30 /   5 ,   6 , 8*0 /
+  data ndndx /  25 ,  15 , 8*0 /
+  data nldxa /  35 ,  67 , 8*0 /
+  data nldxb /  80 , 112 , 8*0 /
+  data nldxd /  38 ,  70 , 8*0 /
+  data nld30 /   5 ,   6 , 8*0 /
 
-!-----------------------------------------------------------------------
-!-----------------------------------------------------------------------
+  ! Initialize module moda_bitbuf
 
-!  Initialize module moda_bitbuf
+  maxbyt = min(10000,mxmsgl)
 
-maxbyt = min(10000,mxmsgl)
+  ! Initialize module moda_h4wlc
 
-!  Initialize module moda_h4wlc
+  nh4wlc = 0
 
-nh4wlc = 0
+  ! Initialize /MAXCMP/
 
-!  Initialize /MAXCMP/
+  maxcmb = maxbyt
+  maxrow = 0
+  maxcol = 0
+  ncmsgs = 0
+  ncsubs = 0
+  ncbyts = 0
 
-MAXCMB = MAXBYT
-MAXROW = 0
-MAXCOL = 0
-NCMSGS = 0
-NCSUBS = 0
-NCBYTS = 0
+  ! Initialize /PADESC/
 
-!  Initialize /PADESC/
+  ibct = ifxy('063000')
+  ipd1 = ifxy('102000')
+  ipd2 = ifxy('031001')
+  ipd3 = ifxy('206001')
+  ipd4 = ifxy('063255')
 
-IBCT = ifxy('063000')
-IPD1 = ifxy('102000')
-IPD2 = ifxy('031001')
-IPD3 = ifxy('206001')
-IPD4 = ifxy('063255')
+  ! Initialize module moda_stbfr
 
-!  Initialize module moda_stbfr
-
-do i=1,nfiles
-  iolun(i) = 0
-  iomsg(i) = 0
-enddo
-
-!  Initialize module moda_idrdm
-
-do i=1,nfiles
-  idrdm(i) = 0
-enddo
-
-!  Initialize module moda_msglim
-
-do i=1,nfiles
-  msglim(i) = 3
-enddo
-
-!  Initialize module moda_usrint
-
-do i=1,nfiles
-  nval(i) = 0
-enddo
-
-!  Initialize /REPTAB/
-
-do I=1,5
-  LENS(I) = LENX(I)
-  do J=1,2
-    IDNR(I,J) = ifxy(ADSN(I,J))
-    TYPS(I,J) = TYPX(I,J)
-    REPS(I,J) = REPX(I,J)
+  do i=1,nfiles
+    iolun(i) = 0
+    iomsg(i) = 0
   enddo
-enddo
 
-!  Initialize module moda_tababd
+  ! Initialize module moda_idrdm
 
-!    ntba(0) is the maximum number of entries within internal BUFR table A
-ntba(0) = maxtba
-!    ntbb(0) is the maximum number of entries within internal BUFR Table B
-ntbb(0) = maxtbb
-!    ntbd(0) is the maximum number of entries within internal BUFR Table D
-ntbd(0) = maxtbd
-
-!  Initialize /DXTAB/
-
-MAXDX = maxbyt
-!  .... IDXV is the version number of the local tables
-IDXV  = 1
-
-do J=1,10
-  LDXA(J)  = NLDXA(J)
-  LDXB(J)  = NLDXB(J)
-  LDXD(J)  = NLDXD(J)
-  LD30(J)  = NLD30(J)
-  DXSTR(J) = '      '
-  NXSTR(J) = NDNDX(J)*2
-  do I=1,NDNDX(J)
-    I1 = I*2-1
-    call ipkm(DXSTR(J)(I1:I1),2,ifxy(DNDX(I,J)))
+  do i=1,nfiles
+    idrdm(i) = 0
   enddo
-enddo
 
-!  Initialize module moda_bufrmg
+  ! Initialize module moda_msglim
 
-do i=1,nfiles
-  msglen(i) = 0
-enddo
+  do i=1,nfiles
+    msglim(i) = 3
+  enddo
 
-!  Initialize /MRGCOM/
+  ! Initialize module moda_usrint
 
-NRPL = 0
-NMRG = 0
-NAMB = 0
-NTOT = 0
+  do i=1,nfiles
+    nval(i) = 0
+  enddo
 
-!  Initialize /DATELN/
+  ! Initialize /REPTAB/
 
-if(LENDAT.ne.10) LENDAT = 8
+  do i=1,5
+    lens(i) = lenx(i)
+    do j=1,2
+      idnr(i,j) = ifxy(adsn(i,j))
+      typs(i,j) = typx(i,j)
+      reps(i,j) = repx(i,j)
+    enddo
+  enddo
 
-!  Initialize /ACMODE/
+  ! Initialize module moda_tababd
 
-IAC = 0
+  ! ntba(0) is the maximum number of entries within internal BUFR table A
+  ntba(0) = maxtba
+  ! ntbb(0) is the maximum number of entries within internal BUFR Table B
+  ntbb(0) = maxtbb
+  ! ntbd(0) is the maximum number of entries within internal BUFR Table D
+  ntbd(0) = maxtbd
 
-!  Initialize module moda_bufrsr
+  ! Initialize /DXTAB/
 
-do i=1,nfiles
-  jsr(i) = 0
-enddo
+  maxdx = maxbyt
+  ! idxv is the version number of the local tables
+  idxv = 1
 
-!  Initialize module moda_dscach
+  do j=1,10
+    ldxa(j)  = nldxa(j)
+    ldxb(j)  = nldxb(j)
+    ldxd(j)  = nldxd(j)
+    ld30(j)  = nld30(j)
+    dxstr(j) = '      '
+    nxstr(j) = ndndx(j)*2
+    do i=1,ndndx(j)
+      i1 = i*2-1
+      call ipkm(dxstr(j)(i1:i1),2,ifxy(dndx(i,j)))
+    enddo
+  enddo
 
-ncnem = 0
+  ! Initialize module moda_bufrmg
 
-!  Initialize /MSGCMP/
+  do i=1,nfiles
+    msglen(i) = 0
+  enddo
 
-CCMF = 'N'
+  ! Initialize /MRGCOM/
 
-!  Initialize /TABLEF/
+  nrpl = 0
+  nmrg = 0
+  namb = 0
+  ntot = 0
 
-CDMF = 'N'
+  ! Initialize /DATELN/
 
-!  Initialize /MSTINF/
+  if(lendat.ne.10) lendat = 8
 
-CMTDIR = &
-'@MASTER_TABLE_DIR_F@'
-call mtinfo(CMTDIR,98,99)
+  ! Initialize /ACMODE/
 
-return
-end
+  iac = 0
+
+  ! Initialize module moda_bufrsr
+
+  do i=1,nfiles
+    jsr(i) = 0
+  enddo
+
+  ! Initialize module moda_dscach
+
+  ncnem = 0
+
+  ! Initialize /MSGCMP/
+
+  ccmf = 'N'
+
+  ! Initialize /TABLEF/
+
+  cdmf = 'N'
+
+  ! Initialize /MSTINF/
+
+  cmtdir = &
+    '@MASTER_TABLE_DIR_F@'
+  call mtinfo(cmtdir,98,99)
+
+  return
+end subroutine bfrini
