--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,15 +4,15 @@
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 list(APPEND fortran_src
-  modules_vars.F90 modules_arrs.F90 blocks.F90 borts.F90 capit.f chekstab.f cktaba.f
+  modules_vars.F90 modules_arrs.F90 blocks.F90 borts.F90 capit.f cktaba.f
   cmpmsg.f cmsgini.f cnved4.f codflg.f conwin.f copydata.F90 dumpdata.F90
   drfini.f drstpl.f dxinit.f dxmini.f elemdx.f
   errwrt.F90 fstag.f getabdb.f getcfmng.f getlens.f getntbe.f gettagpr.f
   gettagre.f gettbh.f getvalnb.f getwin.f hold4wlc.f icmpdx.f
   idxmsg.f ifbget.f fxy.F90 igetmxby.f igetntbi.f igetntbl.f
-  igetrfel.f igetsc.f igettdi.f imrkopr.f inctab.f invcon.f invmrg.f invtag.f invwin.f
+  igetrfel.f igetsc.f igettdi.f imrkopr.f invcon.f invmrg.f invtag.f invwin.f
   iokoper.f ipks.f ishrdx.f isize.f
-  jstnum.f lcmgdf.f lmsg.f lstjpb.f makestab.f missing.F90
+  jstnum.f lcmgdf.f lmsg.f jumplink.F90 missing.F90
   mesgbc.f mesgbf.f mrginv.f msgupd.f mtfnam.f mtinfo.f mvb.f
   nemdefs.f nemock.f nemspecs.f nemtab.f nemtba.f nemtbax.f nemtbb.f nemtbd.f nenubd.f nevn.f newwin.f
   nmsub.f nmwrd.f numtab.f numtbd.f nvnwin.f nwords.f nxtwin.f openbt.f pad.f
@@ -20,8 +20,8 @@ list(APPEND fortran_src
   rdcmps.f rdmtbb.f rdmtbd.f rdmtbf.f rdtree.f rdusdx.f readdx.f
   readwritemg.F90 readwritesb.F90 readlc.f rewnbf.f rsvfvm.f s013vals.F90
   tankrcpt.F90 seqsdx.f setvalnb.f sntbbe.f sntbde.f sntbfe.f stbfdx.f
-  standard.F90 stntbi.f stntbia.f strbtm.f strcln.f string.f strnum.F90 strsuc.F90 tabent.f
-  tabsub.f trybump.f ufbcnt.f ufbcup.f ufbevn.f ufbget.f ufbin3.f ufbint.f ufbinx.f
+  standard.F90 stntbi.f stntbia.f strbtm.f strcln.f string.f strnum.F90 strsuc.F90
+  trybump.f ufbcnt.f ufbcup.f ufbevn.f ufbget.f ufbin3.f ufbint.f ufbinx.f
   memmsgs.F90 ufbovr.f ufbpos.f ufbqcd.f ufbqcp.f ufbrep.f ufbrp.f
   ufbrw.f ufbseq.f ufbsp.f ufbstp.f ufbtab.f ciencode.F90 cidecode.F90
   ups.f uptdd.f usrtpl.f wrcmps.f wrdxtb.f writcp.f writdx.f writlc.f
