--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,10 +6,10 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 list(APPEND fortran_src
   modules_vars.F90 modules_arrs.F90 blocks.F90 borts.F90 capit.f cktaba.f
   cmpmsg.f cmsgini.f cnved4.f codflg.f conwin.f copydata.F90 dumpdata.F90 drfini.f drstpl.f dxtable.F90
-  errwrt.F90 fstag.f getabdb.f getcfmng.f getlens.f getntbe.f gettagpr.f
-  gettagre.f gettbh.f getvalnb.f getwin.f hold4wlc.f
-  ifbget.f fxy.F90 igetntbi.f igetntbl.f iokoper.f ipks.f isize.f
-  igetrfel.f igetsc.f igettdi.f imrkopr.f invcon.f invmrg.f invtag.f invwin.f
+  errwrt.F90 fstag.f getabdb.f getcfmng.f getlens.f gettagpr.f
+  gettagre.f getvalnb.f getwin.f hold4wlc.f
+  ifbget.f fxy.F90 iokoper.f ipks.f isize.f
+  igetrfel.f igetsc.f imrkopr.f invcon.f invmrg.f invtag.f invwin.f
   jstnum.f lcmgdf.f jumplink.F90 mastertable.F90 missing.F90
   mesgbc.f mesgbf.f mrginv.f msgupd.f mvb.f
   nemdefs.f nemock.f nemspecs.f nemtab.f nemtba.f nemtbax.f nemtbb.f nemtbd.f nenubd.f nevn.f newwin.f
@@ -21,7 +21,7 @@ list(APPEND fortran_src
   memmsgs.F90 ufbovr.f ufbpos.f ufbqcd.f ufbqcp.f ufbrep.f ufbrp.f
   ufbrw.f ufbseq.f ufbsp.f ufbstp.f ufbtab.f ciencode.F90 cidecode.F90
   ups.f uptdd.f usrtpl.f wrcmps.f writcp.f writlc.f
-  wrtree.f arallocf.F90 ireadmt.f irev.F90 openclosebf.F90
+  wrtree.f arallocf.F90 irev.F90 openclosebf.F90
   bufr_interface.F90 bufr_c2f_interface.F90 x4884.F90 bufrlib.F90)
 
 list(APPEND c_src
