Add test file caching for Spack CI

--- a/.github/workflows/Spack.yml
+++ b/.github/workflows/Spack.yml
@@ -37,6 +37,13 @@ jobs:
       run: |
         sudo apt install python3 python3-numpy
 
+    - name: cache-data
+      id: cache-data
+      uses: actions/cache@v3
+      with:
+        path: ~/data
+        key: data-13
+
     - name: spack-build-and-test
       run: |
         git clone -c feature.manyFiles=true https://github.com/spack/spack
@@ -44,7 +51,7 @@ jobs:
         spack env create bufr-env $GITHUB_WORKSPACE/bufr/spack/spack.yaml
         spack env activate bufr-env
         cp $GITHUB_WORKSPACE/bufr/spack/package.py $SPACK_ROOT/var/spack/repos/builtin/packages/bufr/package.py
-        spack develop --no-clone --path $GITHUB_WORKSPACE/bufr bufr@develop
+        spack develop --no-clone --path $GITHUB_WORKSPACE/bufr bufr@develop test_files=/home/runner/data
         spack add bufr@develop%gcc@11 ${{ matrix.variants }}
         spack external find cmake gmake python py-numpy
         spack concretize
