--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -9,6 +9,7 @@ configure_file(${CMAKE_CURRENT_SOURCE_DIR}/sinv.F90.in ${CMAKE_CURRENT_BINARY_DI
 
 # Source code for utilities.
 list(APPEND _utils_srcs
+  apxdx.F90
   binv.F90
   cmpbqm.F90
   ${CMAKE_CURRENT_BINARY_DIR}/sinv.F90
