--- a/.github/workflows/MacOS.yml
+++ b/.github/workflows/MacOS.yml
@@ -17,6 +17,7 @@ jobs:
     runs-on: macos-latest
     env:
       FC: gfortran-11
+      F90: gfortran-11
 
     steps:
 
@@ -32,7 +33,6 @@ jobs:
         pip3 install ninja
         pip3 install netCDF4
         pip3 install protobuf
-        sudo ln -sf /usr/local/bin/gfortran-11 /usr/local/bin/gfortran
           
     - name: checkout-bufr
       uses: actions/checkout@v4
