--- a/.github/workflows/MacOS.yml
+++ b/.github/workflows/MacOS.yml
@@ -28,7 +28,7 @@ jobs:
     
     - name: install-deps
       run: |
-        pip3 install numpy==1.26.3
+        pip3 install numpy
         pip3 install meson
         pip3 install ninja
         pip3 install netCDF4
