--- a/.github/workflows/MacOS.yml
+++ b/.github/workflows/MacOS.yml
@@ -33,6 +33,7 @@ jobs:
         pip3 install ninja
         pip3 install netCDF4
         pip3 install protobuf
+        sudo ln -sf /usr/local/bin/gfortran-11 /usr/local/bin/gfortran
           
     - name: checkout-bufr
       uses: actions/checkout@v4
