convert hold4wlc, codflg, and getcfmng to F90

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,9 +5,9 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 list(APPEND fortran_src
   modules_vars.F90 modules_arrs.F90 blocks.F90 borts.F90 capit.f cktaba.f
-  compress.F90 cnved4.f codflg.f conwin.f copydata.F90 dumpdata.F90 drstpl.f dxtable.F90
-  errwrt.F90 fstag.f getabdb.f getcfmng.f getlens.f gettagpr.f
-  gettagre.f getwin.f hold4wlc.f ifbget.f fxy.F90 iokoper.f ipks.f isize.f
+  compress.F90 cnved4.f conwin.f copydata.F90 dumpdata.F90 drstpl.f dxtable.F90
+  errwrt.F90 fstag.f getabdb.f getlens.f gettagpr.f
+  gettagre.f getwin.f ifbget.f fxy.F90 iokoper.f ipks.f isize.f
   igetrfel.f igetsc.f imrkopr.f invcon.f invmrg.f invtag.f invwin.f
   jstnum.f lcmgdf.f jumplink.F90 mastertable.F90 missing.F90 mesgbc.f mesgbf.f mrginv.f
   nemdefs.f nemock.f nemspecs.f nemtab.f nemtba.f nemtbax.f nemtbb.f nemtbd.f nenubd.f nevn.f newwin.f
